# utils_microlibs

./: README.md
socket_rpc/: MICROLIB.md  README.md  pyproject.toml
socket_rpc/src/socket_rpc/: __init__.py  standalone_client.py  standalone_server.py
ssh_distributed/: MANIFEST.in  MICROLIB.md  README.md  pyproject.toml
ssh_distributed/src/ssh_distributed/: __init__.py  base.py  create_tunnel.sh  download_part_weights.sh  kill_tmux_session_on_host.sh  rsync_file.sh  run_on_host.sh
