# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh_distributed"
version = "0.1.2"
description = "Microlib for managing distributed computations using ssh."
readme = "README.md"
authors = [{ name = "Hristo Vrigazov", email = "hvrigazov@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/microlib-org/utils_microlibs"

[project.optional-dependencies]
dev = ["pytest", "tqdm"]
